# 42run

./: .gitignore  CMakeLists.txt  fragment.glsl  test.cpp  vertex.glsl
Framework/FreeType/include/freetype2/: ._ft2build.h
Framework/FreeType/include/freetype2/freetype/: ._freetype.h  ._ftadvanc.h  ._ftautoh.h  ._ftbbox.h  ._ftbdf.h  ._ftbitmap.h  ._ftbzip2.h  ._ftcache.h  ._ftcffdrv.h  ._ftchapters.h  ._ftcid.h  ._fterrdef.h  ._fterrors.h  ._ftfntfmt.h  ._ftgasp.h  ._ftglyph.h  ._ftgxval.h  ._ftgzip.h  ._ftimage.h  ._ftincrem.h  ._ftlcdfil.h  ._ftlist.h  ._ftlzw.h  ._ftmac.h  ._ftmm.h  ._ftmodapi.h  ._ftmoderr.h  ._ftotval.h  ._ftoutln.h  ._ftpfr.h  ._ftrender.h  ._ftsizes.h  ._ftsnames.h  ._ftstroke.h  ._ftsynth.h  ._ftsystem.h  ._fttrigon.h  ._ftttdrv.h  ._fttypes.h  ._ftwinfnt.h  (+5 more)
Framework/FreeType/include/freetype2/freetype/config/: ._ftheader.h  ._ftoption.h  ._ftstdlib.h
Framework/FreeType/lib/: libfreetype.6.dylib  libfreetype.la
Framework/FreeType/lib/pkgconfig/: freetype2.pc
Framework/FreeType/share/aclocal/: ._freetype2.m4
Framework/FreeType/share/man/man1/: ._freetype-config.1
Framework/Soil/lib/: libSOIL.dylib
Framework/assimp/: INSTALL_RECEIPT.json
Framework/assimp/lib/pkgconfig/: assimp.pc
Framework/ftgl/: INSTALL_RECEIPT.json
Framework/ftgl/lib/: libftgl.2.1.3.dylib
Framework/ftgl/lib/pkgconfig/: ftgl.pc
Framework/glm/: INSTALL_RECEIPT.json
Framework/glm/lib/pkgconfig/: glm.pc
Models/: floor.mtl  surface.mtl
Models/myOfficeChair/: chair.blend
Models/nanosuit/: nanosuit.blend  nanosuit.blend1  nanosuit.mtl  nanosuitleft.blend  nanosuitleft.mtl
Models/obstical/: block.blend  block.mtl
Models/office_chair/: chair.blend  chair.blend1  office_chair.mtl
Models/room/: room.blend  room.blend1  room.mtl
Shaders/: fragment.glsl  vertex.glsl
includes/: 42run.h  globals.h  mesh.h  model.h  modle.h  obstical.h  ogl.h  player.h  room.h  shader.h  structs.h  support.h
shaders/: fragment.glsl  textFragment.glsl  textVertex.glsl  textureVertex.glsl  vertex.glsl
src/: ceiling.cpp  flaw.cpp  load_shader.cpp  main.cpp  mesh.cpp  model.cpp  obj_loader.cpp  object.cpp  obstical.cpp  ogl.cpp  player.cpp  room.cpp  shader.cpp  support.cpp  wall.cpp
